Another fix for sudo vs. non-sudo usage.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,8 +24,10 @@
     backup: '{{item.backup|default(omit)}}'
   with_items: django_settings_templates
 
-- name: run included tasks with sudo depending on django_user
-  include: 'included.yml'
-  vars:
-    ansible_sudo: '{{(django_user != ansible_ssh_user)|bool}}'
-    ansible_sudo_user: '{{django_user}}'
+- name: run included tasks with sudo
+  include: 'with_sudo.yml'
+  when: django_user != ansible_ssh_user
+
+- name: run included tasks without sudo
+  include: 'without_sudo.yml'
+  when: django_user == ansible_ssh_user
