--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -12,7 +12,7 @@
     group: '{{item.dir_group|default((item.group|default(omit,true)),true)}}'
     mode: '{{item.dir_mode|default((item.mode|default(omit,true)),true)}}'
     state: directory
-  with_items: django_settings_templates
+  with_items: '{{ django_settings_templates }}'
 
 - name: install settings files from templates
   template:
@@ -22,7 +22,7 @@
     group: '{{item.group|default(omit,true)}}'
     mode: '{{item.mode|default(omit,true)}}'
     backup: '{{item.backup|default(omit)}}'
-  with_items: django_settings_templates
+  with_items: '{{ django_settings_templates }}'
 
 - name: run included tasks with sudo
   include: 'with_sudo.yml'
