Loads of testing updates, change handling of become vs. not become, add support for notifying handlers when anything changes, add support for custom changed_when expressions on django_manage commands.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 tmp
 test/tmp
 test/proj/this
+*.retry
+*.pyc
+.tox
+tests/roles/cchurch.virtualenv
+tests/roles/chrismeyersfsu.provision_docker
+tests/roles/geerlingguy.repo-epel
