--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,32 @@
 ---
 
+sudo: required
+dist: trusty
 language: python
-python: "2.7"
+python:
+  - "2.7"
+services:
+  - docker
+env:
+  global:
+    - ANSIBLE_CONFIG=tests/ansible.cfg
+  matrix:
+    - ANSIBLE_VERSION_SPEC="ansible>=2.1,<2.2"
+    - ANSIBLE_VERSION_SPEC="ansible>=2.2,<2.3"
+    - ANSIBLE_VERSION_SPEC="ansible>=2.3,<2.4"
+
 before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq python-apt
+  - sudo apt-get update -qq
+  - sudo apt-get install -y -o Dpkg::Options::="--force-confnew" docker-ce
+
 install:
-  - pip install -r requirements.txt
+  - sudo apt-get install -y sshpass software-properties-common
+  - pip install $ANSIBLE_VERSION_SPEC
+  - pip install docker-py
+  - ansible-galaxy install -f -p tests/roles -r tests/roles/requirements.yml
+  - ansible --version
+
 script:
-  - ansible-playbook -i localhost, -c local -vv test/main.yml
+  - ansible-playbook -i tests/inventory tests/main.yml --syntax-check
+  - ansible-playbook -i tests/inventory tests/main.yml -vv
+
