--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 
+django_directories: []
+
 django_settings_templates: []
 
 django_settings: ''
@@ -9,7 +11,6 @@ django_virtualenv: ''
 django_pre_commands: []
 
 django_main_commands:
-  - syncdb
   - migrate
   - collectstatic
 
