Fix tests/role for Ansible 2.1 and 2.2.

--- a/tasks/update.yml
+++ b/tasks/update.yml
@@ -47,10 +47,14 @@
     skip: '{{item.skip|default(omit)}}'
   with_items: '{{django_pre_commands}}'
   register: _django_pre_commands_results
+  # Override collectstatic changed_when on Ansible 2.1.
   changed_when: >
-    (item.changed_when is defined)|ternary(
-      lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_pre_commands_results),
-      _django_pre_commands_results.changed,
+    (item.command|default(item) == "collectstatic")|ternary(
+      "0 static files" not in _django_pre_commands_results.out,
+      (item.changed_when is defined)|ternary(
+        lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_pre_commands_results),
+        _django_pre_commands_results.changed|default(false),
+      )
     )
 
 - name: run main django commands
@@ -69,10 +73,14 @@
     skip: '{{item.skip|default(omit)}}'
   with_items: '{{django_main_commands}}'
   register: _django_main_commands_results
+  # Override collectstatic changed_when on Ansible 2.1.
   changed_when: >
-    (item.changed_when is defined)|ternary(
-      lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_main_commands_results),
-      _django_main_commands_results.changed,
+    (item.command|default(item) == "collectstatic")|ternary(
+      "0 static files" not in _django_main_commands_results.out,
+      (item.changed_when is defined)|ternary(
+        lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_main_commands_results),
+        _django_main_commands_results.changed|default(false),
+      )
     )
 
 - name: run django post commands
@@ -91,8 +99,12 @@
     skip: '{{item.skip|default(omit)}}'
   with_items: '{{django_post_commands}}'
   register: _django_post_commands_results
+  # Override collectstatic changed_when on Ansible 2.1.
   changed_when: >
-    (item.changed_when is defined)|ternary(
-      lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_post_commands_results),
-      _django_post_commands_results.changed,
+    (item.command|default(item) == "collectstatic")|ternary(
+      "0 static files" not in _django_post_commands_results.out,
+      (item.changed_when is defined)|ternary(
+        lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_post_commands_results),
+        _django_post_commands_results.changed|default(false),
+      )
     )
