--- a/meta/main.yml
+++ b/meta/main.yml
@@ -3,19 +3,20 @@
 galaxy_info:
   author: Chris Church
   description: Configure and update a Django project.
-  company: "Nine More Minutes, Inc."
+  company: 'Nine More Minutes, Inc.'
   license: BSD
   min_ansible_version: 2.1
   platforms:
     - name: EL
-      versions: ['all']
-    - name: Fedora
-      versions: ['all']
+      versions:
+        - '6'
+        - '7'
     - name: Ubuntu
-      versions: ['all']
-    - name: Debian
-      versions: ['all']
-  categories:
+      versions:
+        - trusty
+        - xenial
+  galaxy_tags:
     - development
+    - web
 allow_duplicates: true
 dependencies: []
