Rename custom lookup plugin.

--- a/tasks/update.yml
+++ b/tasks/update.yml
@@ -53,7 +53,7 @@
     (item.command|default(item) == "collectstatic")|ternary(
       "0 static files" not in _django_pre_commands_results.out|default(""),
       (item.changed_when is defined)|ternary(
-        lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_pre_commands_results),
+        lookup('_django_eval', item.changed_when|default(false), result=_django_pre_commands_results),
         _django_pre_commands_results.changed|default(false),
       )
     )
@@ -79,7 +79,7 @@
     (item.command|default(item) == "collectstatic")|ternary(
       "0 static files" not in _django_main_commands_results.out|default(""),
       (item.changed_when is defined)|ternary(
-        lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_main_commands_results),
+        lookup('_django_eval', item.changed_when|default(false), result=_django_main_commands_results),
         _django_main_commands_results.changed|default(false),
       )
     )
@@ -105,7 +105,7 @@
     (item.command|default(item) == "collectstatic")|ternary(
       "0 static files" not in _django_post_commands_results.out|default(""),
       (item.changed_when is defined)|ternary(
-        lookup('_evaluate_conditionals', item.changed_when|default(false), result=_django_post_commands_results),
+        lookup('_django_eval', item.changed_when|default(false), result=_django_post_commands_results),
         _django_post_commands_results.changed|default(false),
       )
     )
