--- a/tests/roles/requirements.yml
+++ b/tests/roles/requirements.yml
@@ -1,5 +1,6 @@
 ---
 
 - src: cchurch.virtualenv
-- src: chrismeyersfsu.provision_docker
-- src: geerlingguy.repo-epel
+- name: chrismeyersfsu.provision_docker
+  src: https://github.com/chrismeyersfsu/provision_docker
+  version: 516d9d97387c6976f9eb26bce0fd1b343e00c6da
