--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,24 @@
 [tox]
-envlist = ansible{21,22,23}
+envlist = ansible{21,22,23,24,devel}-{centos6,centos7,ubuntu14,ubuntu16}
 skipsdist = true
 
 [testenv]
 commands =
     ansible --version
-    ansible-playbook -i tests/inventory tests/main.yml
+    ansible-playbook -i tests/inventory -l {env:ANSIBLE_LIMIT} -vv tests/main.yml
 basepython = python2.7
 deps =
-    ansible21: ansible>=2.1,<2.2
-    ansible22: ansible>=2.2,<2.3
-    ansible23: ansible>=2.3,<2.4
+    ansible21: ansible~=2.1,<2.2
+    ansible22: ansible~=2.2,<2.3
+    ansible23: ansible~=2.3,<2.4
+    ansible24: ansible~=2.4.0
+    ansibledevel: git+https://github.com/ansible/ansible.git@devel
     docker-py
 setenv =
+    centos6: ANSIBLE_LIMIT=centos6
+    centos7: ANSIBLE_LIMIT=centos7
+    ubuntu14: ANSIBLE_LIMIT=ubuntu14
+    ubuntu16: ANSIBLE_LIMIT=ubuntu16
     PYTHONDONTWRITEBYTECODE=1
     ANSIBLE_CONFIG=tests/ansible.cfg
 passenv = DOCKER_* HOME USER
