Workaround hang with copy module + docker connection + ansible 2.1/2.2.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ test/proj/this
 *.retry
 *.pyc
 .tox
+tests/test_project.tgz
 tests/roles/cchurch.virtualenv
 tests/roles/chrismeyersfsu.provision_docker
 tests/roles/geerlingguy.repo-epel
