--- a/tox.ini
+++ b/tox.ini
@@ -8,9 +8,9 @@ commands =
     ansible-playbook -i tests/inventory -l {env:ANSIBLE_LIMIT} -vv tests/main.yml
 basepython = python2.7
 deps =
-    ansible21: ansible~=2.1,<2.2
-    ansible22: ansible~=2.2,<2.3
-    ansible23: ansible~=2.3,<2.4
+    ansible21: ansible~=2.1.0
+    ansible22: ansible~=2.2.0
+    ansible23: ansible~=2.3.0
     ansible24: ansible~=2.4.0
     ansibledevel: git+https://github.com/ansible/ansible.git@devel
     docker-py
@@ -21,4 +21,5 @@ setenv =
     ubuntu16: ANSIBLE_LIMIT=ubuntu16
     PYTHONDONTWRITEBYTECODE=1
     ANSIBLE_CONFIG=tests/ansible.cfg
+    ANSIBLE_FORCE_COLOR=1
 passenv = DOCKER_* HOME USER
